--- a/sections/01_Introduction.tex
+++ b/sections/01_Introduction.tex
@@ -1,9 +1,9 @@
 \section{Introduction}
 
-The value of technologies which support synchronous remote group communication has been reinforced in recent years, with the increased adoption of remote work, recreation, research, and education \cite{cumbo2021, scriven2021, takashi2012}. However, those technologies are often inaccessible to communities who lack reliable access to digital infrastructure or high levels of literacy \cite{kommiya2019}. Recent HCI research has explored the use of telephony to support resource-limited communities accessing the types of services typically associated with Internet-based infrastructures \cite{khullar2021, Csik2016, Richardson2022, eitzinger2019}. While the majority of these Interactive Voice Response (IVR) platforms enable asynchronous communication (e.g. voice forums for discussion and knowledge sharing \cite{Patel2010}), a recent focus has emerged on the use of telephony to enable synchronous group communication. These technologies have typically been used to infrastructure `broadcast radio' style talk shows with underprivileged communities: supporting listeners with platforms for discussion and access to expert knowledge through audio interfaces, without requiring specialised equipment or Internet access \cite{Kazakos2016, Yadav2017, Talhouk2017}. 
+The value of technologies which support synchronous remote group communication (that is, realtime communication between three or more remote participants) has been reinforced in recent years, with the increased adoption of remote work, recreation, research, and education \cite{cumbo2021, scriven2021, takashi2012} through platforms such as Zoom\footnote{https://zoom.us/}. However, such technologies are often inaccessible to communities who lack reliable access to digital infrastructure or high levels of literacy. Recent HCI research has explored the use of telephony to support resource-limited communities accessing the types of services typically associated with Internet-based infrastructures \cite{khullar2021, Csik2016, Richardson2022, eitzinger2019}. While the majority of these Interactive Voice Response (IVR) platforms enable asynchronous communication (e.g. voice forums for discussion and knowledge sharing \cite{Patel2010}), a recent focus has emerged on the use of telephony to enable synchronous group communication. These technologies have typically been used to infrastructure `broadcast radio' style talk shows with underprivileged communities: supporting listeners with platforms for discussion and access to expert knowledge through audio interfaces, without requiring specialised equipment or Internet access \cite{Kazakos2016, Yadav2017, Talhouk2017}. The design and development of such platforms should be of great interest to the CSCW community, as they potentially offer new modes of communication with groups, organizations, communities, and networks that might not otherwise be reached.
 
-However, while recent research has investigated the repurposing and reconfiguration of Internet-based technologies such as Zoom to adapt to diverse new use cases \cite{Bartindale2021} and to improve perceptions and outcomes of multitasking \cite{marlow2016}, the use of these synchronous telephony platforms beyond these `talk show' formats has been limited: as they are described, each appear to have been built to specifically accommodate a specific engagement structure, without consideration to adaptability or how emergent formats of audio interaction could be supported. The focus on these `single use case' platforms, each designed to facilitate the same interaction archetypes, has meant that communities lacking access to more flexible online synchronous communication platforms such as Zoom are currently excluded from engaging in these emerging forms of remote participation. Furthermore, during the development of our own synchronous telephony platform, we realised that many of these systems are built upon similar technologies and underlying design approaches: we found we were combating a steep learning curve when interfacing with (frequently poorly documented) telephony software stacks, simply to re-tread ground already contributed in prior research projects.
+However, while recent research has investigated the repurposing and reconfiguration of Internet-based technologies such as Zoom to adapt to diverse new use cases \cite{Bartindale2021}, the use of these synchronous telephony platforms beyond these `talk show' formats has been limited: as they are described, each appear to have been built to specifically accommodate a specific engagement structure, without consideration to adaptability or how emergent formats of audio interaction could be supported. The focus on these `single use case' platforms, each designed to facilitate the same interaction archetypes, has meant that communities lacking access to more flexible online synchronous communication platforms such as Zoom are currently excluded from engaging in these emerging forms of remote participation. Furthermore, during the development of our own synchronous telephony platform, we realised that many of these systems are built upon similar technologies and underlying design approaches: we found we were combating a steep learning curve when interfacing with (frequently poorly documented) telephony software stacks, simply to re-tread ground already contributed in prior research projects.
 
 As seen in other emerging HCI design contexts (such as human-IoT system interaction \cite{Chuang2018}, or user identification through touch \cite{Kharrufa2017}), a lack of agreed upon context-independent terminology to describe components, behaviours and characteristics can inhibit designers engaging with the space---especially those who are non-technical \cite{Kharrufa2017}. Similarly, believe that there is a non-trivial barrier to entry for HCI designers and developers entering the space of synchronous telephony: that research has been limited by a lack of a cohesive vocabulary which differentiates between potential design spaces and the underlying technical architecture required to support them. Without this differentiation, subsequent projects have had to `reinvent the telephony wheel' as we did: spending significant development time designing and building (very similar, nonnovel) underlying infrastructures, rather than concentrating on exploring the multiple design spaces these platforms could provide. 
 
-To address this issue, this paper contributes a design vocabulary for synchronous group telephony: a visual framework which, by utilising a concrete set of terms and relationships defined in a formal ontology, is designed to help prototype, communicate and integrate synchronous telephony designs. To illustrate how this vocabulary can assist in designing synchronous telephony platforms, we first demonstrate its application to the established talk show format used in prior research projects. Then, by applying it to other possible use cases, we discuss how such platforms can be designed to orchestrate remote stakeholder engagements with a degree of flexibility previously impossible in contexts with offline participants. We hope that by introducing a cohesive set of axioms and differentiation between interaction design and technical infrastructure, this design vocabulary will support future researchers in identifying and navigating the multiple rich, under-explored design spaces of synchronous group telephony.
+To address this issue, this paper contributes a design vocabulary for synchronous group telephony: a visual framework which, by utilising a concrete set of terms and relationships defined in a formal ontology, is designed to help prototype, communicate and integrate synchronous telephony designs. To illustrate how this vocabulary can assist in designing synchronous telephony platforms, we first demonstrate its application to the established talk show format used in prior research projects. Then, by applying it to other possible use cases, we discuss how such platforms can be designed to orchestrate remote stakeholder engagements with a degree of flexibility previously impossible in contexts with offline participants. We hope that by introducing a cohesive set of axioms and differentiation between interaction design and technical infrastructure, this design vocabulary will support future researchers in identifying and navigating the multiple rich, under-explored design spaces of synchronous group telephony for collaborative and social computing.
