--- a/sections/02_RelatedWork.tex
+++ b/sections/02_RelatedWork.tex
@@ -2,14 +2,14 @@
 
 \subsection{IVR \& Asynchronous Audio}
 
-By allowing users to interact with digital systems through standard phone calls using their phone's keypad (and sometimes even their voice \cite{khullar2021}), Interactive Voice Response (IVR) systems have been shown to be an effective tool for information retrieval and exchange: especially in low-resource contexts where users have limited internet access \cite{eitzinger2019} and low literacy inhibits the usability of text-based interfaces \cite{sharma2009}. IVR and asynchronous audio has proven to be a versatile medium, with previous projects utilising it in a wide variety of contexts and use cases, including: performing voice-based surveys \cite{khullar2021_surveys}; supporting users in accessing information on-demand \cite{Riaz2017} or using multi-modal voice browser \cite{mahelaqua2013}; connecting offline workers to online marketplaces \cite{Richardson2022}; connecting families in different time zones using multiple devices, where users can have a feeling of sharing their stories, activities, and time \cite{heshmat2020}; enabling citizen journalism \cite{Ejaz2018}; creating `voice forums', where users can create and respond to audio messages through phone calls \cite{Patel2010, Vashistha2015}; social networking of farmers \cite{Indrani2015}; and interacting with automated conversational agents (`chatbots') to access information \cite{Jain2018, Yadav2019}. These systems offer greater accessibility to users from communities with oral traditions \cite{Ndwe2012}, and can be designed to support cost-free, on-demand access to end-users \cite{Richardson2022, zhang1998}. Additionally, prior studies have highlighted the value of being able to access recordings for later reference on-demand \cite{Talhouk2017}, with the ability to repeatedly access the same information being useful for low-literate users who cannot write information down \cite{Jain2018}. 
+By allowing users to interact with digital systems through standard phone calls using their phone's keypad (and sometimes even their voice \cite{khullar2021}), Interactive Voice Response (IVR) systems have been shown to be an effective tool for information retrieval and exchange: especially in low-resource contexts where users have limited internet access \cite{eitzinger2019} and low literacy inhibits the usability of text-based interfaces \cite{sharma2009}. IVR and asynchronous audio has proven to be a versatile medium, with previous projects utilising it in a wide variety of contexts and use cases, including: performing voice-based surveys \cite{khullar2021_surveys}; supporting users in accessing information on-demand \cite{Riaz2017}; connecting offline workers to online marketplaces \cite{Richardson2022}; enabling citizen journalism \cite{Ejaz2018}; creating `voice forums', where users can create and respond to audio messages through phone calls \cite{Patel2010, Vashistha2015}; and interacting with automated conversational agents (`chatbots') to access information \cite{Jain2018, Yadav2019}. These systems offer greater accessibility to users from communities with oral traditions \cite{Ndwe2012}, and can be designed to support cost-free, on-demand access to end-users \cite{Richardson2022}. Additionally, prior studies have highlighted the value of being able to access recordings for later reference on-demand \cite{Talhouk2017}, with the ability to repeatedly access the same information being useful for low-literate users who cannot write information down \cite{Jain2018}. 
 
 Despite the versatility and scalability afforded by this infrastructure, however, automated IVR systems aren't always able to fulfill users' highly specific and contextual queries: traditional IVR menu structures are limited in scope, requiring designers to choose what information and interactions should be prioritised \cite{Richardson2022}. Chatbots have been shown to be able to respond accurately to highly specific queries \cite{Jain2018}, but such systems are dependant on currently unreliable speech-to-text systems and access to extensive databanks of previous responses by human experts. Furthermore, for users unfamiliar with the limitations of chatbots, interacting with them can clash with expectations of interacting with a human over the phone \cite{Jain2018}: resulting in conversational queries which humans could interpret correctly, but automated systems struggle with \cite{Yadav2019}. Meanwhile, voice forums offer human replies, but the ability for anyone to respond to queries can lead to misinformation \cite{Patel2010}, as well as harassment, threats, and systemic marginalisation towards women and minorities \cite{Vashistha2019}.
 
 \subsection{Radio \& Synchronous Audio Platforms}
 \label{section:talkshow}
 
-Synchronous voice formats, such as radio, can address these issues through direct moderation of a synchronous activity by a host. Often run by volunteers, community radio stations broadcast live audio content to local communities: offering a method for civic engagement, deliberation and knowledge sharing \cite{Cibin2019, Maye2020}. Projects such as RootIO have drastically lowered the costs of radio infrastructure and encourage community-led participatory programming \cite{Csik2016}, particularly when combined with technologies for generating audio content, such as text-to-speech \cite{Scott2020}. Unfortunately, while many radio programmes offer the ability for audiences to call into a show to ask questions, by default radio is an inherently passive medium in terms of audience interaction. Furthermore, broadcast radio often requires the navigation of local policy and broadcast content standards: erecting legal, logistical and psychological barriers due to formal license applications and requirements \cite{Maye2020, Bidwell2021}.
+Synchronous voice formats, such as radio, can address these issues through direct moderation of a synchronous activity by a host. Often run by volunteers, community radio stations broadcast live audio content to local communities: offering a method for civic engagement, deliberation and knowledge sharing \cite{Cibin2019, Maye2020}. Projects such as RootIO, a hardware and software platform which supports communities in operating low-cost radio stations, have drastically lowered the costs of radio infrastructure and encourage community-led participatory programming \cite{Csik2016}: particularly when combined with technologies for generating audio content, such as text-to-speech \cite{Scott2020}. Unfortunately, while many radio programmes offer the ability for audiences to call into a show to ask questions, by default radio is an inherently passive medium in terms of audience interaction. Furthermore, broadcast radio often requires the navigation of local policy and broadcast content standards: erecting legal, logistical and psychological barriers due to formal license applications and requirements \cite{Maye2020, Bidwell2021}.
 
 In recent years, researchers such as Kazakos et al. \cite{Kazakos2016} have begun sidestepping these barriers by providing access to `radio' programming through phone-based platforms: hosting live shows through synchronous telephony, with listeners able to dial in with their phones to listen and ask questions to a host controlling the show from a smartphone or web application. These platforms use free, `off the shelf' software such as FreeSWITCH\footnote{\url{https://signalwire.com/freeswitch}} to programmatically manipulate phone calls. 
 
@@ -21,9 +21,9 @@ Despite this promise, however, these platforms still feature significant design 
 
 \subsection{Ontologies, Design Vocabularies, \& Group Telephony}
 
-Having an agreed-upon terminology to describe the components, behaviours, and characteristics of emerging or underexplored technologies can support the design, development and comparison of implementations of them. `\textit{From a purely computational standpoint, the ontology of a system lies at the heart of its ability to represent elements of the physical world}' \cite{Brubaker2011}. Formal ontologies are often produced with this use-case in mind: intended to create `\textit{a shared and common understanding of some domain that can be communicated across people and computers}' \cite{struder1998}. They can be used to create and communicate consensual conceptual models (referred to as `domain reference' ontologies), which can then be further developed to be used to support semantic interoperability within automated systems (referred to as being `operational') \cite{guizzardi2007} when written in a machine-interpretable language such as OWL (Web Ontology Language\footnote{\url{https://www.w3.org/OWL/}}). To support extensibility and reusability, ontologies are frequently organised within three tiers: \textit{foundational}, which describe fundamental concepts that can be shared and reused across many fields (e.g. `a thing'); \textit{core}, which build upon foundational axioms to provide abstract definitions more specific to a particular field (e.g. `a document is a thing'); and \textit{domain}, a definition of concepts and relations concerning a specific, specialised domain (e.g. `a forum post is a document') \cite{scherp2011}. Costa et al. note that ontologies have been used to structure and infer knowledge, support reasoning, and serve as a basis for developing systems or frameworks across many portions of the CSCW and HCI domains---such as within user interface design, ubiquitous computing, user modeling, design methods, usability, and accessibility \cite{costa2021}. 
+Having an agreed-upon terminology to describe the components, behaviours, and characteristics of emerging or underexplored technologies can support the design, development and comparison of implementations of them. Formal ontologies are often produced with this use-case in mind: intended to create `\textit{a shared and common understanding of some domain that can be communicated across people and computers}' \cite{struder1998}, or `\textit{represent elements of the physical world}' \cite{Brubaker2011}. They can be used to create and communicate consensual conceptual models (referred to as `domain reference' ontologies), which can then be further developed to be used to support semantic interoperability within automated systems (referred to as being `operational') \cite{guizzardi2007} when written in a machine-interpretable language such as OWL (Web Ontology Language\footnote{\url{https://www.w3.org/OWL/}}). To support extensibility and reusability, ontologies are frequently organised within three tiers: \textit{foundational}, which describe fundamental concepts that can be shared and reused across many fields (e.g. `a thing'); \textit{core}, which build upon foundational axioms to provide abstract definitions more specific to a particular field (e.g. `a document is a thing'); and \textit{domain}, a definition of concepts and relations concerning a specific, specialised domain (e.g. `a forum post is a document') \cite{scherp2011}. Ontologies have been used to structure and infer knowledge, support reasoning, and serve as a basis for developing systems or frameworks across the HCI and CSCW communities---such as within user interface design, ubiquitous computing, user modeling, design methods, usability, accessibility, and online community collaboration \cite{costa2021, Kamran2016}.
 
-Beyond formal ontologies, other approaches have been used within CSCW and HCI to describe and illustrate the characteristics of technologies and interactions with them. For example, Kamran et al. proposed a social semantic tagging system, Collaborative Ontology Development, that dynamically updates user and web content identities based on the evolving collective opinion of relevant user communities in the `Entrepreneurship' domain, thereby fostering collaboration, networking, and knowledge sharing in the field of entrepreneurship \cite{Kamran2016}. Kharrufa et al. contributed a conceptual model which allowed for the visual communication of different approaches to user identification on multi-touch devices: aiming to support non-technical practitioners to compare the common parameters that characterize them, independent of their specific use-cases \cite{Kharrufa2017}. Similarly, Chuang et al. produced a `design vocabulary' to describe user-computer communication within IoT systems, supporting the comparison and design of different forms of interaction \cite{Chuang2018}. In comparison to the aforementioned machine-interpretable ontologies which focus on describing existing implementation, these examples instead place greater focus on future design: communicating a system's requirements, strengths, limitations, or possibility space through the use of visuals and hypothesised future technologies. 
+Beyond formal ontologies, other approaches have been used within HCI to describe and illustrate the characteristics of technologies and interactions with them. For example, Kharrufa et al. contributed a conceptual model which allowed for the visual communication of different approaches to user identification on multi-touch devices: aiming to support non-technical practitioners to compare the common parameters that characterize them, independent of their specific use-cases \cite{Kharrufa2017}. Similarly, Chuang et al. produced a `design vocabulary' to describe user-computer communication within IoT systems, supporting the comparison and design of different forms of interaction \cite{Chuang2018}. In comparison to the aforementioned machine-interpretable ontologies which focus on describing existing implementation, these examples instead place greater focus on future design: communicating a system's requirements, strengths, limitations, or possibility space through the use of visuals and hypothesised future technologies. 
 
 \begin{figure}[h]
   \centering
