--- a/sections/03_Development.tex
+++ b/sections/03_Development.tex
@@ -1,10 +1,19 @@
 \section{Ontology Development}
 
-In response, we set out to develop a vocabulary which could be used by designers and developers as a tool to easily design and communicate different models of synchronous audio engagements, describe existing technologies, and highlight other novel ways in which such platforms could be used. As such, we decided to produce two outputs: a formal ontology called Scaffolding Interactions through Synchronous Telephony (\ONT{}), which would define the terms for the necessary system components and how they interact; and a design vocabulary built upon \ONT{}, supporting less technical stakeholders in exploring potential designs and identifying their strengths, weaknesses and requirements through a visual format reminiscent of Twilio's Studio interface.
+In response, we set out to develop a vocabulary which could be used by designers and developers as a tool to easily design and communicate different models of synchronous audio engagements, describe existing technologies, and highlight other novel ways in which such platforms could be used. As such, we decided to produce two outputs: a formal ontology called Scaffolding Interactions through Synchronous Telephony (\ONT{}), which would define in OWL the terms for the necessary system components and how they interact; and a design vocabulary built upon \ONT{}, supporting less technical stakeholders in exploring potential designs and identifying their strengths, weaknesses and requirements through a visual format reminiscent of Twilio's Studio interface.
 
 Costa et al. argue that following ontology engineering methods tends to result in higher quality ontologies, as they encourage the adoption of best practices and support the identification of user requirements \cite{costa2021}. However, their systematic review of HCI ontologies found that only 3 of the 35 HCI ontologies they analysed were developed using one. Two of these were developed using NeOn: a framework which provides 9 methodology configurations for various use-case scenarios \cite{gomez2009, suarez2012}. These scenarios offer different procedures based on how much the new ontology should reuse or re-engineer existing ontological resources: from generating a new ontology from scratch, to the extension, adaptation, or even localisation of existing ontologies. As this scenario system provides a clear step-by-step methodology, we decided to use NeOn to develop \ONT{}.
 
-As one of the key strengths of formal ontologies is that they can be extended, re-used, and made compatible with each other \cite{scherp2011}, we wanted to build upon existing core concepts: adding our own domain-level axioms relating to synchronous audio engagements on top of existing ontological resources. As such, we decided that NeOn's third scenario, `\textit{Reusing Ontological Resources}', is most suitable for that purpose. Ontologies in this scenario \cite{suarez2012_reuse} should be produced through the following procedure: requirements specification for the new ontology---including its purpose, scope, and intended users---through the generation of competency questions (CQs) and non-functional requirements; reformulating the CQs to support the identification of `linking axioms' in existing ontologies; searching for and identifying ontologies which can fulfill these linking axioms, and then engineering the new ontology through an appropriate development process. This section describes the outputs of each section of this methodology.
+As one of the key strengths of formal ontologies is that they can be extended, re-used, and made compatible with each other \cite{scherp2011}, we wanted to build upon existing core concepts: adding our own domain-level axioms relating to synchronous audio engagements on top of existing ontological resources. As such, we decided that NeOn's third scenario, `\textit{Reusing Ontological Resources}', is most suitable for that purpose. Ontologies in this scenario \cite{suarez2012_reuse} should be produced through the following procedure: choosing an appropriate development process; requirements specification for the new ontology---including its purpose, scope, and intended users---through the generation of competency questions (CQs) and non-functional requirements; reformulating the CQs to support the identification of `linking axioms' in existing ontologies; searching for and identifying ontologies which can fulfill these linking axioms. This section describes the outputs of each section of this methodology.
+
+\subsection{Iterative-Incremental Development Cycle}
+
+NeOn has two recommended models for ontology development: waterfall, which is a linear development model---ideal for contexts where the requirements for the ontology are unchangeable, known and unambiguous; and the `iterative-incremental' model, which is well suited when requirements are not fully understood or may change \cite{suarez2012}.
+For our chosen scenario, NeOn actually recommends using the waterfall method. However, as we aimed for \ONT{} to describe an underexplored domain with uncertain requirements, we instead chose to follow the iterative-incremental development cycle.
+
+More requirements were added and revisions performed as our understanding of the problem context grew, and we ideated ways in which different activity formats could be implemented. This included the consideration of features uncommon in telephony, but widely utilised elsewhere (such as Zoom's `breakout rooms'), as well as how of such features could support novel activity formats. These use cases, and how they can be described using \ONT{}, will be discussed in Section \ref{section:scenarios}.
+
+In total, \ONT{} went through three major revisions of development by this paper's first two authors. The second revision added NFR3, discussed below, when we struggled to convey the structure of a group activity using the nascent ontology's axioms. The third revision was developed to support the containerisation and looping of activity format logic. Each revision underwent a verbal review with the other authors. To facilitate communication with authors unfamiliar with OWL, these discussions were aided by visual representations of \ONT{} generated with draw.io\footnote{\url{https://app.diagrams.net/}}.
 
 \subsection{Requirements Specification}
 The key questions of the NeOn requirements specification activity \cite{suarez2012_requirements}, and our responses to them, are as follows: 
@@ -26,8 +35,8 @@ Given the answers to the previous questions, the non-functional requirements for
 
 \begin{itemize}
     \item NFR1: The ontology should feature a separation of concerns between the technical infrastructure that supports base phone call functionality, and the application logic that implements activity procedure.
-    \item NFR2: The axioms describing these activities should also be able to be configured in a way which can be used to easily design and communicate activity processes in a visually intuitive format.
-    \item NFR3: The ontology should feature enough detail and scope to adequately describe the key components of a platform's required architecture and engagements held through it, but not so much to as inhibit design explorations.
+    \item NFR2: The ontology should feature enough detail and scope to adequately describe the key components of a platform's required architecture and engagements held through it, but not so much to as inhibit design explorations.
+    \item NFR3: (Added in revision 2) The axioms describing these activities should also be able to be configured in a way which can be used to easily design and communicate activity processes in a visually intuitive format.
 \end{itemize}
 
 To determine the functional requirements, NeOn recommends using the prior answers to generate competency questions which the ontology should be able to address, and organising them into categories. For \ONT{}, 56 CQs were developed by the two lead authors. These were then categorised through an inductive card sorting activity into 3 themed groups: `Activity Procedure \& Implementation', `Current State', and `Engagement Data'. A selection of CQs from each group can be seen in Tables \ref{tab:CQ_activity}, \ref{tab:CQ_state}, and \ref{tab:CQ_data}.
@@ -82,7 +91,7 @@ To determine the functional requirements, NeOn recommends using the prior answer
 
 \subsection{Reusing Ontological Resources}
 
-Adapting or expanding upon existing ontological resources can both avoid `reinventing the wheel' \cite{suarez2012} and support extensibility and use alongside other vocabularies within a network \cite{scherp2011}. To select appropriate ontologies, NeOn recommends reformulating the initial competency questions with new, more generic terms `\textit{that could potentially belong to ontologies to be reused}' and to `\textit{identify axioms that link terms of the CQs to terms that could be reused}' \cite{suarez2012_reuse}. Examples of how we adapted our CQs to find more generic terms can be seen in Table \ref{tab:CQ_reformed}. Once some potential axioms were developed, we then searched for ontologies which implemented them, rewording them if unsuccessful (failed alternatives are included in Table \ref{tab:CQ_reformed}). Unfortunately a number of the Semantic Web search engines recommended by the NeOn authors are now offline, however we were able to successfully use a combination of Google and Linked Open Vocabularies\footnote{\url{https://lov.linkeddata.es/dataset/lov}} to find a wide array of popular ontologies. Once a potential axiom had been found, the rest of that ontology was browsed for other matches, or more suitable axioms which had not been thought of during the reformation process.
+Adapting or expanding upon existing ontological resources can both avoid `reinventing the wheel' \cite{suarez2012} and support extensibility and use alongside other vocabularies within a network \cite{scherp2011}. To select appropriate ontologies, NeOn recommends reformulating the initial competency questions with new, more generic terms `\textit{that could potentially belong to ontologies to be reused}' and to `\textit{identify axioms that link terms of the CQs to terms that could be reused}' \cite{suarez2012_reuse}. Examples of how we adapted our CQs to find more generic terms can be seen in Table \ref{tab:CQ_reformed}. Once some potential axioms were developed, we then searched for ontologies which implemented them, rewording them if unsuccessful (failed alternatives are included in Table \ref{tab:CQ_reformed}). Unfortunately a number of the Semantic Web search engines recommended by the NeOn authors are now offline, however we were able to successfully use a combination of Google and Linked Open Vocabularies\footnote{\url{https://lov.linkeddata.es/dataset/lov}} to find a wide array of popular ontologies. Once a potential axiom had been found, the rest of that ontology was browsed for other matches, or more suitable axioms which had not been thought of during the reformation process. 
 
 \begin{table}
   \caption{Example Reformed Competency Questions}
@@ -102,9 +111,3 @@ Adapting or expanding upon existing ontological resources can both avoid `reinve
 
 
 Two existing ontologies were found to be particularly suitable: Friend of a Friend (aka `\textit{foaf}': an ontology describing people, their activities and their relations to other people and objects\footnote{\url{http://xmlns.com/foaf/0.1/}}) and Semantically Interlinked Online Communities (aka `\textit{sioc}': an ontology which builds on \textit{foaf} to describe online community spaces, such as forums\footnote{\url{http://rdfs.org/sioc/spec/}}). These existing ontologies were deemed suitable to be used as core vocabularies from which to develop \ONT{}, as they are already used to describe the configurations of virtual discussion spaces (e.g. the axioms \textit{sioc:Space}, \textit{sioc:Site}, \textit{sioc:Container}), the users and systems who interact with them (\textit{foaf:Agent}, \textit{sioc:UserAccount}, \textit{sioc:Usergroup}), and the data produced by these interactions (\textit{foaf:Document}, \textit{sioc:Item}).
-% \end{sloppypar}
-
-\subsection{Iterative-Incremental Development Cycle}
-
-NeOn has two recommended models for ontology development: waterfall, which is a linear development model, ideal for contexts where the requirements for the ontology are unchangeable, known and unambiguous; and the `iterative-incremental' model, which is well suited when requirements are not fully understood or may change \cite{suarez2012}.
-For our chosen scenario, NeOn actually recommends using the waterfall method. However, as we aimed for \ONT{} to describe an underexplored domain with uncertain requirements, we instead chose to follow the iterative-incremental development cycle. \ONT{} went through three major revisions of development by this paper's first two authors: each revision building towards fulfilling a greater number of competency questions, before undergoing review with the other authors. To facilitate communication with authors unfamiliar with OWL, these reviews utilised visual representations of \ONT{} generated with draw.io\footnote{\url{https://app.diagrams.net/}} (as shown in Figure \ref{fig:drawio}). For the sake of clarity and brevity, these diagrams excluded the base-level \textit{foaf} and \textit{sioc} axioms (the full class hierarchy is visible in Figure \ref{fig:hierarchy}). 
