--- a/sections/04_Overview.tex
+++ b/sections/04_Overview.tex
@@ -3,13 +3,15 @@
 \begin{figure*}
   \centering
   \includegraphics[width=0.8\columnwidth]{images/simplified.drawio.png}
-  \caption{A visualisation of the classes and their relationships within \ONT{}, abbreviated for clarity. Solid arrows represent object properties (relationships). Circles depict classes whose parent classes are not shown (all are descendants from \textit{foaf} or \textit{sioc} classes). Ovals represent subclasses, connected to their parent class by dashed arrows (e.g. SystemAction is a subclass of Action).}
+  \caption{A visualisation of the classes and their relationships within \ONT{}, abbreviated for clarity and space. Solid arrows represent object properties (relationships). Circles depict classes whose parent classes are not shown (all are descendants from \textit{foaf} or \textit{sioc} classes). Ovals represent subclasses, connected to their parent class by dashed arrows (e.g. SystemAction is a subclass of Action).}
   \Description{A diagram giving an overview of most of the classes in \ONT{}, with labelled arrows representing relationships between classes. It is broken into five coloured layers. The first layer is blue, labelled as the "UI Layer", and contains six classes: Management interface, its subclasses Engagement Planning and Realtime Management, Phone Call, Room, and Member Interaction. Phone call encounters room. Member Interactions occur within Rooms. The next layer, the "Scaffolding Layer", is beige. It contains two parent classes: Logic container and logic item. Both are labelled as being defined by the Engagement Planning interface in the UI Layer. Logic container structures Rooms in the UI layer, and has 3 subclasses: Script, Cue and Gate. A script can contain many Logic Containers. A logic container is succeeded by a Gate, and Gates precede Logic Containers. Logic Item has two subclasses: Action and Condition. A Cue has actions, a gate has conditions. Condition has a single shown subclass, Manual Trigger, which is triggered by the Realtime Management interface in the UI Layer. Action has one shown subclass, System Action. The next layer, in green, is the "App Layer", which has one class: Application Service. Application Service assesses Gates, and manages and enacts Actions. The fourth layer is the purple "System Layer", which contains the PBX Service class. This receives Member Interactions from the UI layer, informs and receives instructions from the Application Service in the App Layer, and performs System Actions from the Scaffolding Layer. The final layer is the red "Data Layer", which contains the Engagement Record class. Engagement Records are created by the Application Service in the App Layer, and describe Member Interactions in the UI layer. }\label{fig:drawio}
 \end{figure*}
 
-Made up of relatively few classes, \ONT{} is designed to describe and structure the design space of synchronous group telephony engagement platforms, whilst still remaining abstract enough to encourage exploration, interpretation and expansion. The ontology can be conceptualised as being made up of five layers of components: \textit{UI}, which describes how users and hosts interact with the system through phone calls and visual applications; \textit{Scaffolding}, which defines the components that, when combined, create the logic to orchestrates different engagement formats; \textit{System}, which describes the software (such as FreeSWITCH) by which the phone calls are initiated and manipulated; \textit{App}, which manages and enacts the Scaffolding logic and directs the System layer components;  and \textit{Data}, which refers to the data created, stored and retrieved by the App layer. 
+Made up of relatively few classes, \ONT{} is designed to describe and structure the design space of synchronous group telephony engagement platforms, whilst still remaining abstract enough to encourage exploration, interpretation and expansion (addressing NFR2). To address NFR1, the ontology can be conceptualised as being made up of five layers of components: \textit{UI}, which describes how users and hosts interact with the system through phone calls and visual applications; \textit{Scaffolding}, which defines the components that, when combined, create the logic to orchestrates different engagement formats; \textit{System}, which describes the software (such as FreeSWITCH) by which the phone calls are initiated and manipulated; \textit{App}, which manages and enacts the Scaffolding logic and directs the System layer components;  and \textit{Data}, which refers to the data created, stored and retrieved by the App layer. 
 
-Two forms of visual representation were also developed: one to communicate the relationships between the different layers of components of the ontology (Figure \ref{fig:drawio}); and the \ONT{} visual design vocabulary, which aims to support designers in designing, communicating, and understanding the technical requirements of different types of group engagements over synchronous telephony (an example is given in Figure \ref{fig:preshow}). This section will give a detailed overview of the \ONT{} ontology, using these visuals as a communication aid.
+To address NFR3, two forms of visual representation were also developed: one to communicate the relationships between the different layers of components of the ontology (Figure \ref{fig:drawio}); and the \ONT{} visual design vocabulary, which aims to support designers in designing, communicating, and understanding the technical requirements of different types of group engagements over synchronous telephony (an example is given in Figure \ref{fig:preshow}). For the sake of clarity and brevity, these diagrams exclude the base-level \textit{foaf} and \textit{sioc} axioms. The full class hierarchy is visible in Figure \ref{fig:hierarchy}. 
+
+This section will give a detailed overview of the \ONT{} ontology, using these visuals as a communication aid.
 
 \begin{figure}[h]
   \centering
@@ -21,7 +23,7 @@ Two forms of visual representation were also developed: one to communicate the r
 
 \subsection{The UI Layer}
 
-The UI Layer describes users and the methods by which they interact with the system---be that by a phone call or through a visual interface. Users (instances of \textit{foaf:Person}) interacting with the system are either a Host or Member (subclasses of \textit{sioc:UserAccount}). 
+The UI Layer describes users and the methods by which they interact with the system---be that by a phone call or through a visual interface. Users (instances of \textit{foaf:Person}) interacting with the system are either a Host or Member (subclasses of \textit{sioc:UserAccount}). Note that while we have designed \ONT{} around interactions over standard phone calls, it's possible to apply these same concepts through other synchronous communication formats, such as WebRTC\footnote{https://webrtc.org/}---especially for Hosts, who will likely have access to an online interface.
 
 Members are regular participants, and engage with the system through PhoneCalls (extends \textit{sioc:Space}). Through PhoneCalls, they encounter the system by populating audio spaces referred to as Rooms (extends \textit{sioc:Container}). Prior platforms only utilised a single Room, where all users were in a single conference call, but (as discussed later) multiple could be created simultaneously. MemberInteractions (extending \textit{sioc:Item}) occur inside these rooms, and could be utterances of speech or button presses. 
 
@@ -65,7 +67,7 @@ The Application Layer contains the ApplicationService: a software application (e
 
 \subsection{The System Layer}
 
-The System Layer features the PBXService (also a \textit{foaf:Agent}): the key server-side component common to previous synchronous telephony platforms \cite{Kazakos2016, Talhouk2017, Yadav2017}. PBXService is an application capable of programmatically initiating and managing voice connections (e.g. via Voice Over IP, or the Public Switched Telephone Network) and creating, populating and destroying Rooms. FreeSWITCH is an example of a PBXService, and was used by Kazakos et al. in their project \cite{Kazakos2016}. The PBXService enacts SystemActions and informs the ApplicationService of any changes in the call state, such as instances of MemberInteractions (e.g. buttons presses, vocal utterances, disconnections).
+The System Layer features the PBXService (also a \textit{foaf:Agent}): the key server-side component common to previous synchronous telephony platforms \cite{Kazakos2016, Talhouk2017, Yadav2017}. PBXService is an application capable of programmatically initiating and managing voice connections (e.g. via Voice Over IP, or the Public Switched Telephone Network) and creating, populating and destroying Rooms. FreeSWITCH is an example of a PBXService, and was used by Kazakos et al. in their project \cite{Kazakos2016}. Another popular example is Asterisk \footnote{https://www.asterisk.org/}. The PBXService enacts SystemActions and informs the ApplicationService of any changes in the call state, such as instances of MemberInteractions (e.g. buttons presses, vocal utterances, disconnections).
 
 \subsection{The Data Layer}
 
