--- a/sections/05_Scenarios.tex
+++ b/sections/05_Scenarios.tex
@@ -1,7 +1,7 @@
 \section{Scaffolding Engagements through \ONT{}'s Design Vocabulary}
 \label{section:scenarios}
 
-This section will use the visual design vocabulary to describe and demonstrate the use of \ONT{} with three different archetypes of group interactions: talk shows, research workshops, and speed dating events. 
+This section will demonstrate the use the visual design vocabulary through the use of 3 scenarios, each featuring a different archetype of group interaction. As discussed previously, each features a use-case that was ideated during the development of \ONT{} as a way of creating and assessing functional requirements. The first scenario, the `talk show' format, demonstrates the applicability of \ONT{} to existing technology from prior work. The second, the `research workshop', acts as an example of how \ONT{} can be used to describe how current remote engagement practices (e.g. breakout rooms) can be implemented through telephony. The third, `speed dating' offers an exploration of how the same set of features can be reconfigured to support new, novel interactions with remote participants over the phone.
 
 \subsection{Scenario 1: Talk Show}
 
