--- a/sections/07_Conclusion.tex
+++ b/sections/07_Conclusion.tex
@@ -2,7 +2,7 @@
 
 We are currently in the process of incorporating \ONT{} into a demonstrable synchronous telephony platform. Within our future work, we plan to use \ONT{} to support the kinds of group interaction formats illustrated in this paper's scenarios, explore some of the previously discussed recordkeeping concepts within the Data Layer, and investigate how \ONT{} could also be used to scaffold asynchronous interactions before, during and after synchronous engagements \cite{Yadav2017}. Through the implementation of this platform, we hope to be able to provide other researchers in this space recommendations for how to put \ONT{} into practice, as well as further refine the vocabulary in response to findings resulting from its implementation.
 
-It is also worth noting that much of \ONT{} could be applied to other mediums, such as synchronous video. We wished to focus on its application to group telephony within this paper, given that it is a particularly under-explored design space. However, as \ONT{} is a formal ontology, future work could extend it to suit other mediums.
+It is also worth noting that much of \ONT{} could be applied to other mediums, such as synchronous video, through digital standards such as WebRTC. We wished to focus on its application to group telephony within this paper, given that it is a particularly under-explored design space. However, as \ONT{} is a formal ontology, future work could extend it to suit other mediums.
 
 \section{Conclusion}
 
